[gd_scene load_steps=9 format=3 uid="uid://cto5lf6r3mumb"]

[ext_resource type="Script" path="res://assets/scripts/static_check.gd" id="1_rn4yx"]
[ext_resource type="Texture2D" uid="uid://dp0wfyq5q61tu" path="res://assets/images/check.png" id="2_7ivp2"]
[ext_resource type="Texture2D" uid="uid://cbpvh25w2ufxu" path="res://assets/images/checkerchecker.png" id="3_oaqpf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dhvyr"]

[sub_resource type="Animation" id="Animation_s7yh7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wykwf"]
resource_name = "check"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(36, 0), Vector2(68, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjmo7"]
_data = {
"RESET": SubResource("Animation_s7yh7"),
"check": SubResource("Animation_wykwf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6in1y"]
size = Vector2(14, 20)

[node name="Node2D" type="Node2D"]
position = Vector2(7, 15)
script = ExtResource("1_rn4yx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7ivp2")

[node name="Area2D" type="Area2D" parent="Sprite2D" groups=["checker"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("RectangleShape2D_dhvyr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pjmo7")
}
speed_scale = 2.0

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(36, 0)
texture = ExtResource("3_oaqpf")

[node name="Area2D" type="Area2D" parent="Sprite2D2" groups=["checker"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D2/Area2D"]
shape = SubResource("RectangleShape2D_6in1y")

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Sprite2D2/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Sprite2D2/Area2D" to="." method="_on_area_2d_area_exited"]
